fix: edu image align

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -305,6 +305,7 @@ img {
 .edu-image {
   width: 16.66%;
   min-width: 48px;
+  text-align: end;
 }
 
 .flex-image {
